tests/snapshots/e2e__stdin_input_is_highlighted.snap
---
source: tests/e2e.rs
expression: readable(&output)
---
status ␛[36m200␛[0m ␛[3;31mnull␛[0m
